--- a/DiscordSmashBot/DiscordSmashBot.csproj
+++ b/DiscordSmashBot/DiscordSmashBot.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DiscordSmashBot.ApiService\DiscordSmashBot.ApiService.csproj" />
+    <ProjectReference Include="..\DiscordSmashBot.TextService\DiscordSmashBot.TextService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
